<resources>
    <string name="app_name">CVLAC UNIQUINDIO</string>
    <string name="bienvenido">BIENVENID@</string>
    <string name="btn_ingresar">INGRESAR</string>
    <string name="titulo_ventana_dos">¿Que desea realizar?</string>
    <string name="btn_uno_ventana_dos">Insertar investigador o \n grupo de investigación</string>
    <string name="btn_dos_ventana_dos">Buscar información de investigador \n o grupo de investigación</string>
    <string name="titulo_fragmento_agregar_investigador">Agregar Investigador</string>
    <string name="radio_butron_uno_item_uno">Insertar Investigador</string>
    <string name="radio_butron_uno_item_dos">Insertar Grupo de Investigación</string>
    <string name="titulo_franment_agregar">Seleccione que insertar</string>
    <string name="btn_ingresar_fragment">INGRESAR</string>
    <string name="titulo_vista_buscar">Buscar</string>
    <string name="radio_button_uno_buscar">Investigador</string>
    <string name="radio_button_dos_buscar">Grupo de Investigación</string>
    <string name="radio_button_tres_buscar">Linea de Investigación</string>
    <string name="nota_vista_buscar">Si la busqueda que va a realizar es en particular ingrese el dato a buscar</string>
    <string name="nombre_grupo">Nombre*:</string>
    <string name="sigla">Sigla*:</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
