<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/imagen"
    android:weightSum="1">


    <TextView
        android:text="@string/titulo_ventana_dos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtTitulo2"
        android:textSize="36sp"
        android:gravity="center_horizontal"
        android:textStyle="normal|bold" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.94"
        android:gravity="center_vertical|center_horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal">

            <Button
                android:text="@string/btn_uno_ventana_dos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnUnoVentanaDos" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal">

            <Button
                android:text="@string/btn_dos_ventana_dos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnDosVentanaDos" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>