<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:text="@string/titulo_franment_agregar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtTituloFragmentIngresar"
            android:textSize="30sp"
            android:textStyle="normal|bold"
            android:gravity="center_horizontal" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="83dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="36dp">

            <RadioButton
                android:text="@string/radio_butron_uno_item_uno"
                android:layout_width="218dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="86dp"
                android:id="@+id/rbInsertarInvestigador"
                android:layout_below="@+id/radioGroup"
                android:layout_toEndOf="@+id/radioGroup" />

            <RadioButton
                android:text="@string/radio_butron_uno_item_dos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rbInsertarGrupoInvestigacion"
                android:layout_weight="1"
                android:layout_below="@+id/radioGroup"
                android:layout_alignParentStart="true" />

        </RadioGroup>
    </RelativeLayout>

</RelativeLayout>